--- a/about.html
+++ b/about.html
@@ -50,6 +50,7 @@
                 <p class="about_text">
                     EN Architecture and Designs is a collaborative association of Architects and Designers that focuses on integrating intellect into the design.
                 </p>
+                <br>
                 <p class="about_text">
                     We are a versatile architectural firm which provides all sorts of architectural solutions for a wide range of projects of various scales.
                 </p>
@@ -59,6 +60,7 @@
                 <p class="about_text">
                     We, at EN+AD not only focus on user sensitive designs but also integrate comprehensive construction technology to get satisfactory end results.
                 </p>
+                <br>
                 <p class="about_text">
                     Aesthetics, Innovation and Sustainability are the key components of our designs. However, we make sure that our spaces do not compromise on functionality and responsiveness.
                 </p>
@@ -119,6 +121,22 @@
                     <img src="assets/about/interns/suvarn_wadekar.jpeg" class="member_photo" alt="">
                     <p class="member_name">Suvarn Wadekar</p>
                     <p class="member_role">(Intern)</p>
+                    <!-- <p class="member_enad"><span class="enad_time">03</span><br>years at<br> ENAD</p> -->
+                    <!-- <p class="member_exp">5 years experience</p> -->
+                </div>
+                <!-- team card -->
+                <div class="team_card">
+                    <!-- <img src="assets/about/interns/suvarn_wadekar.jpeg" class="member_photo" alt=""> -->
+                    <!-- <p class="member_name">Suvarn Wadekar</p> -->
+                    <!-- <p class="member_role">(Intern)</p> -->
+                    <!-- <p class="member_enad"><span class="enad_time">03</span><br>years at<br> ENAD</p> -->
+                    <!-- <p class="member_exp">5 years experience</p> -->
+                </div>
+                <!-- team card -->
+                <div class="team_card">
+                    <!-- <img src="assets/about/interns/suvarn_wadekar.jpeg" class="member_photo" alt=""> -->
+                    <!-- <p class="member_name">Suvarn Wadekar</p> -->
+                    <!-- <p class="member_role">(Intern)</p> -->
                     <!-- <p class="member_enad"><span class="enad_time">03</span><br>years at<br> ENAD</p> -->
                     <!-- <p class="member_exp">5 years experience</p> -->
                 </div>
