mobile menu html

--- a/about.html
+++ b/about.html
@@ -29,6 +29,11 @@
                 <p class="logo">EN+AD</p>
                 <p class="logo_full">Environment, Architecture & Designs</p>
             </a>
+            <div class="mobile_menu_btn">
+                <span class="material-symbols-outlined">
+                    widgets
+                </span>
+            </div>
             <!-- main navigation -->
             <div class="navigation">
                 <a href="index.html" class="nav_links">Home</a>
