--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
                 <p class="logo">EN+AD</p>
                 <p class="logo_full">Environment, Architecture & Designs</p>
             </a>
+            <div class="mobile_menu_btn">
+                <span class="material-symbols-outlined mob_menu_icon menu_open_icon">family_home</span>
+                <span class="material-symbols-outlined menu_close_icon">design_services</span>
+            </div>
             <!-- main navigation -->
             <div class="navigation">
                 <a href="index.html" class="nav_links">Home</a>
@@ -448,6 +452,13 @@
             </div>
         </div>
     </footer>
+    <!-- mobile menu -->
+    <div class="mobile_menu">
+        <a class="mob_menu_link">Home</a>
+        <a class="mob_menu_link">Key Projects</a>
+        <a class="mob_menu_link">Industries</a>
+        <a class="mob_menu_link">About</a>
+    </div>
     <!-- sticky industries header -->
     <div class="sticky_industries">
         <a href="architecture.html" class="sticky_industry">Architecture</a>
