--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
                 <p class="logo">EN+AD</p>
                 <p class="logo_full">Environment, Architecture & Designs</p>
             </a>
+            <!-- mobile menu btn -->
             <div class="mobile_menu_btn">
-                <span class="material-symbols-outlined mob_menu_icon menu_open_icon">family_home</span>
-                <span class="material-symbols-outlined menu_close_icon">design_services</span>
+                <span class="material-symbols-outlined mob_menu_icon menu_open_icon show_mob_icon">family_home</span>
+                <span class="material-symbols-outlined mob_menu_icon menu_close_icon">design_services</span>
             </div>
             <!-- main navigation -->
             <div class="navigation">
