--- a/landscape.html
+++ b/landscape.html
@@ -29,6 +29,11 @@
                 <p class="logo">EN+AD</p>
                 <p class="logo_full">Environment, Architecture & Designs</p>
             </a>
+            <!-- mobile menu btn -->
+            <div class="mobile_menu_btn">
+                <span class="material-symbols-outlined mob_menu_icon menu_open_icon show_mob_icon">family_home</span>
+                <span class="material-symbols-outlined mob_menu_icon menu_close_icon">design_services</span>
+            </div>
             <!-- main navigation -->
             <div class="navigation">
                 <a href="index.html" class="nav_links">Home</a>
@@ -322,6 +327,13 @@
             </div>
         </div>
     </footer>
+    <!-- mobile menu -->
+    <div class="mobile_menu">
+        <a class="mob_menu_link">Home</a>
+        <a class="mob_menu_link">Key Projects</a>
+        <a class="mob_menu_link">Industries</a>
+        <a class="mob_menu_link">About</a>
+    </div>
 
     <!-- ********************************************************* -->
     <script src="js/category.js"></script>
