--- a/about.html
+++ b/about.html
@@ -20,7 +20,6 @@
         <title>About - EN+AD</title>
     </head>
 <body class="category_page">
-
     <!-- header -->
     <header class="category_head">
         <div class="container header_container">
@@ -29,6 +28,11 @@
                 <p class="logo">EN+AD</p>
                 <p class="logo_full">Environment, Architecture & Designs</p>
             </a>
+            <!-- mobile menu btn -->
+            <div class="mobile_menu_btn">
+                <span class="material-symbols-outlined mob_menu_icon menu_open_icon show_mob_icon">family_home</span>
+                <span class="material-symbols-outlined mob_menu_icon menu_close_icon">design_services</span>
+            </div>
             <div class="mobile_menu_btn">
                 <span class="material-symbols-outlined">
                     widgets
@@ -41,7 +45,6 @@
                 <a href="index.html#industries" class="nav_links nav_industries">Industries</a>
                 <a href="about.html" class="nav_links">About</a>
             </div>
-            
         </div>
     </header>
     <!-- left name -->
@@ -235,6 +238,13 @@
             </div>
         </div>
     </footer>
+    <!-- mobile menu -->
+    <div class="mobile_menu">
+        <a class="mob_menu_link">Home</a>
+        <a class="mob_menu_link">Key Projects</a>
+        <a class="mob_menu_link">Industries</a>
+        <a class="mob_menu_link">About</a>
+    </div>
 
     <!-- ********************************************************* -->
     <script src="js/category.js"></script>
