mobile menu links

--- a/about.html
+++ b/about.html
@@ -33,11 +33,11 @@
                 <span class="material-symbols-outlined mob_menu_icon menu_open_icon show_mob_icon">family_home</span>
                 <span class="material-symbols-outlined mob_menu_icon menu_close_icon">design_services</span>
             </div>
-            <div class="mobile_menu_btn">
+            <!-- <div class="mobile_menu_btn">
                 <span class="material-symbols-outlined">
                     widgets
                 </span>
-            </div>
+            </div> -->
             <!-- main navigation -->
             <div class="navigation">
                 <a href="index.html" class="nav_links">Home</a>
@@ -240,10 +240,10 @@
     </footer>
     <!-- mobile menu -->
     <div class="mobile_menu">
-        <a class="mob_menu_link">Home</a>
-        <a class="mob_menu_link">Key Projects</a>
-        <a class="mob_menu_link">Industries</a>
-        <a class="mob_menu_link">About</a>
+        <a href="index.html" class="mob_menu_link">Home</a>
+        <a href="index.html#keyProjects" class="mob_menu_link">Key Projects</a>
+        <a href="index.html#industries" class="mob_menu_link">Industries</a>
+        <a href="about.html" class="mob_menu_link">About</a>
     </div>
 
     <!-- ********************************************************* -->
