--- a/landscape.html
+++ b/landscape.html
@@ -329,10 +329,10 @@
     </footer>
     <!-- mobile menu -->
     <div class="mobile_menu">
-        <a class="mob_menu_link">Home</a>
-        <a class="mob_menu_link">Key Projects</a>
-        <a class="mob_menu_link">Industries</a>
-        <a class="mob_menu_link">About</a>
+        <a href="index.html" class="mob_menu_link">Home</a>
+        <a href="index.html#keyProjects" class="mob_menu_link">Key Projects</a>
+        <a href="index.html#industries" class="mob_menu_link">Industries</a>
+        <a href="about.html" class="mob_menu_link">About</a>
     </div>
 
     <!-- ********************************************************* -->
