--- a/about.html
+++ b/about.html
@@ -247,6 +247,6 @@
     </div>
 
     <!-- ********************************************************* -->
-    <script src="js/category.js"></script>
+    <script src="js/about.js"></script>
 </body>
 </html>
