--- a/index.html
+++ b/index.html
@@ -456,8 +456,8 @@
     <!-- mobile menu -->
     <div class="mobile_menu">
         <a href="index.html" class="mob_menu_link">Home</a>
-        <a href="index.html#keyProjects" class="mob_menu_link">Key Projects</a>
-        <a href="index.html#industries" class="mob_menu_link">Industries</a>
+        <a href="#keyProjects" class="mob_menu_link">Key Projects</a>
+        <a href="#industries" class="mob_menu_link">Industries</a>
         <a href="about.html" class="mob_menu_link">About</a>
     </div>
     <!-- sticky industries header -->
