--- a/hospitality-healthcare.html
+++ b/hospitality-healthcare.html
@@ -265,7 +265,7 @@
         </div>
     </footer>
     <!-- mobile menu -->
-    <div class="mobile_menu">
+    <div class="mobile_menu category_mobile_menu">
         <a href="index.html" class="mob_menu_link">Home</a>
         <a href="index.html#keyProjects" class="mob_menu_link">Key Projects</a>
         <a href="index.html#industries" class="mob_menu_link">Industries</a>
