--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="container hero_container">
                 <p class="pre_head">principle</p>
                 <p class="hero_head">
-                    We combine environment and architecture to create humane spaces that inspire and endure co-ordination between built and unbuilt.
+                    We combine environment and architecture to create humane spaces that inspire and endure co-ordination between built and un-built.
                 </p>
                 <a class="hero_cta">key projects</a>
             </div>
