--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
                 <div class="team_card">
                     <img src="assets/about/saurabh_barde.jpg" class="member_photo" alt="">
                     <p class="member_name">Ar. Saurabh Barde</p>
-                    <p class="member_role">(Founder & Principle Architect)</p>
+                    <p class="member_role">(Founder & Principal Architect)</p>
                     <p class="member_enad"><span class="enad_time">16</span><br>years at<br> ENAD</p>
                     <!-- <p class="member_exp">5 years experience</p> -->
                 </div>
@@ -105,7 +105,7 @@
                 <!-- team card -->
                 <div class="team_card">
                     <img src="assets/about/heli_patel.jpg" class="member_photo" alt="">
-                    <p class="member_name">Int Des. Heli Patel </p>
+                    <p class="member_name">ID. Heli Patel </p>
                     <p class="member_role">(Interior Designer)</p>
                     <p class="member_enad"><span class="enad_time">04</span><br>years at<br> ENAD</p>
                     <!-- <p class="member_exp">5 years experience</p> -->
@@ -157,7 +157,7 @@
                 <!-- associate -->
                 <div class="associate">
                     <p class="associate_name">Ar. Kartiki Arondekar</p>
-                    <p class="associate_role">(Hospitality Specialist)</p>
+                    <p class="associate_role">(B.Arch)</p>
                 </div>
                 <!-- associate -->
                 <div class="associate">
@@ -172,7 +172,7 @@
                 <!-- associate -->
                 <div class="associate">
                     <p class="associate_name">Ar. Anuradha Rathod</p>
-                    <p class="associate_role">(Liasoning Architect)</p>
+                    <p class="associate_role">(B.Arch, Liasoning Architect)</p>
                 </div>
             </div>
         </div>
@@ -188,7 +188,7 @@
                         <p class="footer_logo">EN+AD</p>
                         <p class="footer_logo_full">Environment, Architecture & Designs</p>
                     </a>
-                    <p class="footer_info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim non nesciunt repudiandae delectus libero dicta distinctio iusto quas? Rerum, eius.</p>
+                    <p class="footer_info">We combine environment and architecture to create humane spaces that inspire and endure co-ordination between built and unbuilt.</p>
                 </div>
                 <!-- footer links -->
                 <div class="footer_links_head_wrap">
