--- a/architecture.html
+++ b/architecture.html
@@ -429,7 +429,7 @@
                         <p class="footer_logo">EN+AD</p>
                         <p class="footer_logo_full">Environment, Architecture & Designs</p>
                     </a>
-                    <p class="footer_info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim non nesciunt repudiandae delectus libero dicta distinctio iusto quas? Rerum, eius.</p>
+                    <p class="footer_info">We combine environment and architecture to create humane spaces that inspire and endure co-ordination between built and unbuilt.</p>
                 </div>
                 <!-- footer links -->
                 <div class="footer_links_head_wrap">
