--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
     <section class="hero_wrap">
         <div class="hero">
             <div class="container hero_container">
-                <p class="pre_head">principle</p>
                 <p class="hero_head">
                     We combine environment and architecture to create humane spaces that inspire and endure co-ordination between built and unbuilt.
                 </p>
@@ -116,7 +115,7 @@
                     <div class="key_project_right">
                         <p class="key_project_name">RG-36</p>
                         <p class="key_project_time">Suraksha Smart City, Completed</p>
-                        <p class="key_project_desc">A unique recreational reservation ground nestled near an estuary. At RG-36, we take pride in our commitment to preserving the environment.</p>
+                        <p class="key_project_desc">A unique recreational reservation ground nestled near an estuary.<br>At RG-36, we take pride in our commitment to preserving the environment.</p>
 
                         <div class="key_points v2_key_points">
                             <!-- key_point -->
@@ -403,7 +402,7 @@
                         <p class="footer_logo">EN+AD</p>
                         <p class="footer_logo_full">Environment, Architecture & Designs</p>
                     </a>
-                    <p class="footer_info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim non nesciunt repudiandae delectus libero dicta distinctio iusto quas? Rerum, eius.</p>
+                    <p class="footer_info">We combine environment and architecture to create humane spaces that inspire and endure co-ordination between built and unbuilt.</p>
                 </div>
                 <!-- footer links -->
                 <div class="footer_links_head_wrap">
