--- a/landscape.html
+++ b/landscape.html
@@ -66,11 +66,11 @@
                     <img src="assets/industries_internal/landscape/landscape/1_podium_2.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Recreational Ground at Suraksha Smart City</p>
+                    <p class="project_name">Podium at Suraksha Smart City, Sector-4B</p>
                     <p class="project_desc"><span class="project_detail">Scope:</span> Landscape design</p>
                     <p class="project_desc"><span class="project_detail">Client:</span> CASL Pvt. Ltd.</p>
                     <p class="project_desc"><span class="project_detail">Year:</span> 2023-2024</p>
-                    <p class="project_desc"><span class="project_detail">Area:</span> 2721 sq.m</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 500 sq.m</p>
                     <p class="project_desc"><span class="project_detail">Location:</span> Vasai (E)</p>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                     <p class="project_desc"><span class="project_detail">Scope:</span> Landscape design</p>
                     <p class="project_desc"><span class="project_detail">Client:</span> CASL Pvt. Ltd.</p>
                     <p class="project_desc"><span class="project_detail">Year:</span> 2023-ongoing</p>
-                    <p class="project_desc"><span class="project_detail">Area:</span> 220 sq.m</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 500 sq.m</p>
                     <p class="project_desc"><span class="project_detail">Location:</span> Vasai (E)</p>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                     <p class="project_desc"><span class="project_detail">Scope:</span> Landscape design</p>
                     <p class="project_desc"><span class="project_detail">Client:</span> CASL Pvt. Ltd.</p>
                     <p class="project_desc"><span class="project_detail">Year:</span> 2023-ongoing</p>
-                    <p class="project_desc"><span class="project_detail">Area:</span> 500 sq.m</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 220 sq.m</p>
                     <p class="project_desc"><span class="project_detail">Location:</span> Vasai (E)</p>
                 </div>
             </div>
@@ -117,12 +117,12 @@
                     <img src="assets/industries_internal/landscape/landscape/4_rg_36a.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">EKATMA Village</p>
-                    <p class="project_desc"><span class="project_detail">Scope:</span> Architectural design</p>
-                    <p class="project_desc"><span class="project_detail">Client:</span> Truly Creative Developers</p>
-                    <p class="project_desc"><span class="project_detail">Year:</span> 2021-2024</p>
-                    <p class="project_desc"><span class="project_detail">Area:</span> 48,000 sq.ft. approx</p>
-                    <p class="project_desc"><span class="project_detail">Location:</span> Andheri (W)</p>
+                    <p class="project_name">Podium at Suraksha Smart City, Sector-4B</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Landscape design</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> CASL Pvt. Ltd.</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> 2023-2024</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 2721 sq.m</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Vasai (E)</p>
                 </div>
             </div>
         </div>
@@ -177,7 +177,6 @@
                 </div>
             </div>
         </div>
-        
         <!-- project card -->
         <div class="project_card">
             <div class="project_card_inside">
@@ -188,7 +187,7 @@
                 <div class="project_card_back">
                     <p class="project_name">Urban Park at Suraksha Smart City</p>
                     <p class="project_desc"><span class="project_detail">Scope:</span> Landscape design</p>
-                    <p class="project_desc"><span class="project_detail">Client:</span> Truly Creative Developers</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> CASL Pvt. Ltd.</p>
                     <p class="project_desc"><span class="project_detail">Year:</span> Ongoing</p>
                     <p class="project_desc"><span class="project_detail">Area:</span> 4 acres</p>
                     <p class="project_desc"><span class="project_detail">Location:</span> Vasai (E)</p>
@@ -236,7 +235,7 @@
                 <div class="project_card_back">
                     <p class="project_name">Old Age home for Rajput Foundation</p>
                     <p class="project_desc"><span class="project_detail">Scope:</span> Landscape design</p>
-                    <p class="project_desc"><span class="project_detail">Client:</span> Rajput Foundation</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Shri Rajput Foundation</p>
                     <p class="project_desc"><span class="project_detail">Year:</span> Ongoing</p>
                     <p class="project_desc"><span class="project_detail">Area:</span> 5 acres</p>
                     <p class="project_desc"><span class="project_detail">Location:</span> Kudus</p>
@@ -253,9 +252,9 @@
                 <div class="project_card_back">
                     <p class="project_name">Gated Community</p>
                     <p class="project_desc"><span class="project_detail">Scope:</span> Landscape design</p>
-                    <p class="project_desc"><span class="project_detail">Client:</span> Rajput Foundation</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Private</p>
                     <p class="project_desc"><span class="project_detail">Year:</span> Ongoing</p>
-                    <p class="project_desc"><span class="project_detail">Area:</span> 5 acres</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 12 acres</p>
                     <p class="project_desc"><span class="project_detail">Location:</span> Paigaon</p>
                 </div>
             </div>
@@ -277,7 +276,7 @@
                         <p class="footer_logo">EN+AD</p>
                         <p class="footer_logo_full">Environment, Architecture & Designs</p>
                     </a>
-                    <p class="footer_info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim non nesciunt repudiandae delectus libero dicta distinctio iusto quas? Rerum, eius.</p>
+                    <p class="footer_info">We combine environment and architecture to create humane spaces that inspire and endure co-ordination between built and unbuilt.</p>
                 </div>
                 <!-- footer links -->
                 <div class="footer_links_head_wrap">
