--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600&display=swap" rel="stylesheet">
 
         <!-- css -->
+        <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
         <link rel="stylesheet" href="main.css">
         <title>About - EN+AD</title>
     </head>
@@ -234,6 +235,7 @@
                     <p class="company_details">&copy; EN Architecture & Designs
                         <script>document.write(new Date().getFullYear())</script>
                     </p>
+                    <p class="developer">Developed by: <a class="developer_link" href="https://pratit.dev/" target="_blank">Pratit Bangdiwala</a></p>
                 </div>
             </div>
         </div>
