--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"> -->
     <!-- <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet"> -->
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- css -->
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="main.css">
     <title>EN+AD</title>
 </head>
@@ -114,7 +115,7 @@
 
                     <div class="key_project_right">
                         <p class="key_project_name">RG-36</p>
-                        <p class="key_project_time">Suraksha Smart City, Completed</p>
+                        <p class="key_project_time">Suraksha Smart City, <span class="kp_status">Completed</span></p>
                         <p class="key_project_desc">A unique recreational reservation ground nestled near an estuary.<br>At RG-36, we take pride in our commitment to preserving the environment.</p>
 
                         <div class="key_points v2_key_points">
@@ -231,7 +232,7 @@
 
                     <div class="key_project_right">
                         <p class="key_project_name">Vivek Sewa Kendra</p>
-                        <p class="key_project_time">Bhalivali, Completed</p>
+                        <p class="key_project_time">Bhalivali, <span class="kp_status">Completed</span></p>
                         <p class="key_project_desc">A dedicated NGO, focused on advancing skill development initiatives for tribal communities near MMR.</p>
 
                         <div class="key_points v2_key_points">
@@ -299,7 +300,7 @@
 
                     <div class="key_project_right">
                         <p class="key_project_name">Dream sports complex</p>
-                        <p class="key_project_time">Bandra (E),  Design Proposal Complete</p>
+                        <p class="key_project_time">Bandra (E), <span class="kp_status">Design Proposal Complete</span></p>
                         <p class="key_project_desc">Multi-storied complex designed with XAR studios to offer a panaromic view of the city skyline for activities at the highest level. This is a testament to our principles of modern urban living with an active lifestyle.</p>
 
                         <div class="key_points v2_key_points">
@@ -333,7 +334,7 @@
 
                     <div class="key_project_right">
                         <p class="key_project_name">Coastal Villa</p>
-                        <p class="key_project_time">Alibaug, Completed</p>
+                        <p class="key_project_time">Alibaug, <span class="kp_status">Completed</span></p>
                         <p class="key_project_desc">With meticulous attention to detail, this villa strikes a balance between tradition and innovation. Expressive design helps respond to nature and also a sense of contemporary elegance.</p>
 
                         <div class="key_points v2_key_points">
@@ -448,6 +449,7 @@
                     <p class="company_details">&copy; EN Architecture & Designs
                         <script>document.write(new Date().getFullYear())</script>
                     </p>
+                    <p class="developer">Developed by: <a class="developer_link" href="https://pratit.dev/" target="_blank">Pratit Bangdiwala</a></p>
                 </div>
             </div>
         </div>
