--- a/landscape.html
+++ b/landscape.html
@@ -16,6 +16,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;600&display=swap" rel="stylesheet">
 
         <!-- css -->
+        <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
         <link rel="stylesheet" href="main.css">
         <title>Landscape - EN+AD</title>
     </head>
@@ -130,7 +131,7 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/landscape/landscape/5_podium_om_nagar.jpeg" class="project_image" alt="">
+                    <img src="assets/industries_internal/landscape/landscape/5_podium_om_nagar.jpg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
                     <p class="project_name">Podium at Sethi Palacio</p>
@@ -322,6 +323,7 @@
                     <p class="company_details">&copy; EN Architecture & Designs
                         <script>document.write(new Date().getFullYear())</script>
                     </p>
+                    <p class="developer">Developed by: <a class="developer_link" href="https://pratit.dev/" target="_blank">Pratit Bangdiwala</a></p>
                 </div>
             </div>
         </div>
