--- a/about.html
+++ b/about.html
@@ -43,7 +43,16 @@
             <div class="navigation">
                 <a href="index.html" class="nav_links">Home</a>
                 <a href="index.html#keyProjects" class="nav_links">Key Projects</a>
-                <a href="index.html#industries" class="nav_links nav_industries">Industries</a>
+                <div class="internal_industries">
+                    industries
+                    <div class="industries_links">
+                        <a href="architecture.html" class="industry_links">architecture</a>
+                        <a href="landscape.html" class="industry_links">landscape</a>
+                        <a href="interiors.html" class="industry_links">interiors</a>
+                        <a href="hospitality-healthcare.html" class="industry_links">hospitality & healthcare</a>
+                    </div>
+                </div>
+                <!-- <a href="index.html#industries" class="nav_links nav_industries">Industries</a> -->
                 <a href="about.html" class="nav_links">About</a>
             </div>
         </div>
