--- a/architecture.html
+++ b/architecture.html
@@ -27,8 +27,9 @@
         <div class="container header_container">
             <!-- logo -->
             <a href="index.html" class="logo_wrap">
-                <p class="logo">EN+AD</p>
-                <p class="logo_full">Environment, Architecture & Designs</p>
+                <!-- <p class="logo">EN+AD</p>
+                <p class="logo_full">Environment, Architecture & Designs</p> -->
+                <img class="logo" src="assets/enad-logo.png" alt="">
             </a>
             <!-- mobile menu btn -->
             <div class="mobile_menu_btn">
