--- a/architecture.html
+++ b/architecture.html
@@ -55,19 +55,28 @@
             
         </div>
     </header>
-    <!-- left name -->
+    <!-- mobile menu -->
+    <div class="mobile_menu category_mobile_menu">
+        <a href="index.html" class="mob_menu_link">Home</a>
+        <a href="index.html#keyProjects" class="mob_menu_link">Key Projects</a>
+        <a href="index.html#industries" class="mob_menu_link">Industries</a>
+        <a href="about.html" class="mob_menu_link">About</a>
+    </div>
+    <!-- projects name -->
     <div class="category_name_wrap">
         <p class="category_name category_project_head">Architecture Projects</p>
     </div>
-    <!-- right name -->
-    <!-- <div class="project_head_wrap">
-        <p class="project_head category_project_head">Projects</p>
-    </div> -->
     <!-- industry tabs -->
     <div class="container industry_tabs">
         <p class="industry_tab industryTabActive" data-name="project1">high rise development</p>
         <p class="industry_tab" data-name="project2">individual houses</p>
         <p class="industry_tab" data-name="project3">others</p>
+    </div>
+    <!-- on scroll industry tabs -->
+    <div class="scroll_industry_tabs">
+        <p class="scroll_industry_tab industryTabActive" data-name="project1">high rise development</p>
+        <p class="scroll_industry_tab" data-name="project2">individual houses</p>
+        <p class="scroll_industry_tab" data-name="project3">others</p>
     </div>
     <!-- project 1 cards -->
     <div class="container project_cards_wrap project_wrap_active" data-name="project1">
@@ -491,13 +500,6 @@
             </div>
         </div>
     </footer>
-    <!-- mobile menu -->
-    <div class="mobile_menu category_mobile_menu">
-        <a href="index.html" class="mob_menu_link">Home</a>
-        <a href="index.html#keyProjects" class="mob_menu_link">Key Projects</a>
-        <a href="index.html#industries" class="mob_menu_link">Industries</a>
-        <a href="about.html" class="mob_menu_link">About</a>
-    </div>
 
     <!-- ********************************************************* -->
     <script src="js/category.js"></script>
