on scroll industry tabs

--- a/landscape.html
+++ b/landscape.html
@@ -59,14 +59,15 @@
     <div class="category_name_wrap">
         <p class="category_name category_project_head">Landscape Projects</p>
     </div>
-    <!-- right name -->
-    <!-- <div class="project_head_wrap">
-        <p class="project_head category_project_head">Projects</p>
-    </div> -->
     <!-- industry tabs -->
     <div class="container industry_tabs">
         <p class="industry_tab industryTabActive" data-name="project1">landscape</p>
         <p class="industry_tab" data-name="project2">neighbourhood planning</p>
+    </div>
+    <!-- on scroll industry tabs -->
+    <div class="scroll_industry_tabs">
+        <p class="scroll_industry_tab industryTabActive" data-name="project1">landscape</p>
+        <p class="scroll_industry_tab" data-name="project2">neighbourhood planning</p>
     </div>
     <!-- project 1 cards -->
     <div class="container project_cards_wrap project_wrap_active" data-name="project1" >
