--- a/interiors.html
+++ b/interiors.html
@@ -59,15 +59,17 @@
     <div class="category_name_wrap">
         <p class="category_name category_project_head">Interiors Projects</p>
     </div>
-    <!-- right name -->
-    <!-- <div class="project_head_wrap">
-        <p class="project_head category_project_head">Projects</p>
-    </div> -->
     <!-- industry tabs -->
     <div class="container industry_tabs">
-        <p class="industry_tab interiors_high_enad industryTabActive" data-name="project1"> High-End Residential</p>
+        <p class="industry_tab industryTabActive" data-name="project1"> high-end residential</p>
         <p class="industry_tab" data-name="project2"> residential</p>
         <p class="industry_tab" data-name="project3">commercial</p>
+    </div>
+    <!-- on scroll industry tabs -->
+    <div class="scroll_industry_tabs">
+        <p class="scroll_industry_tab industryTabActive" data-name="project1">high-end residential</p>
+        <p class="scroll_industry_tab" data-name="project2">residential</p>
+        <p class="scroll_industry_tab" data-name="project3">commercial</p>
     </div>
     <!-- project 1 cards -->
     <div class="container project_cards_wrap project_wrap_active" data-name="project1">
