about head class fix

--- a/about.html
+++ b/about.html
@@ -35,11 +35,6 @@
                 <span class="material-symbols-outlined mob_menu_icon menu_open_icon show_mob_icon">family_home</span>
                 <span class="material-symbols-outlined mob_menu_icon menu_close_icon">design_services</span>
             </div>
-            <!-- <div class="mobile_menu_btn">
-                <span class="material-symbols-outlined">
-                    widgets
-                </span>
-            </div> -->
             <!-- main navigation -->
             <div class="navigation">
                 <a href="index.html" class="nav_links">Home</a>
@@ -60,7 +55,7 @@
     </header>
     <!-- left name -->
     <div class="category_name_wrap">
-        <p class="category_name category_project_head hospitality_head">About ENAD</p>
+        <p class="category_name category_project_head">About ENAD</p>
     </div>
     <div class="container about_container project_wrap_position">
         <div class="about_main_text_wrap">
