--- a/architecture.html
+++ b/architecture.html
@@ -14,14 +14,14 @@
         <meta property="og:url" content="https://enarchitecture.in/" />
         <meta property="og:title" content="ENAD - EN Architecture & Designs" />
         <meta property="og:description" content="We combine environment and architecture to create humane spaces that inspire and endure co-ordination between built and un-built." />
-        <meta property="og:image" content="https://enarchitecture.in/assets/industries_internal/interiors/high_enad_residential/4_bunglow_at_wada.jpg" />
+        <meta property="og:image" content="https://enarchitecture.in/assets/industries_internal/architecture/individual_houses/8_house_in_dhule.jpeg" />
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
         <meta property="twitter:url" content="https://enarchitecture.in/" />
         <meta property="twitter:title" content="ENAD - EN Architecture & Designs" />
         <meta property="twitter:description" content="We combine environment and architecture to create humane spaces that inspire and endure co-ordination between built and un-built." />
-        <meta property="twitter:image" content="https://enarchitecture.in/assets/industries_internal/interiors/high_enad_residential/4_bunglow_at_wada.jpg" />
+        <meta property="twitter:image" content="https://enarchitecture.in/assets/industries_internal/architecture/individual_houses/8_house_in_dhule.jpeg" />
 
         <!-- google icons -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
