meta title update

--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Primary Meta Tags -->
-    <meta name="title" content="ENAD - EN Architecture & Designs" />
+    <meta name="title" content="EN+AD - EN Architecture & Designs" />
     <meta name="description" content="We combine environment and architecture to create humane spaces that inspire and endure co-ordination between built and un-built." />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://enarchitecture.in/" />
-    <meta property="og:title" content="ENAD - EN Architecture & Designs" />
+    <meta property="og:title" content="EN+AD - EN Architecture & Designs" />
     <meta property="og:description" content="We combine environment and architecture to create humane spaces that inspire and endure co-ordination between built and un-built." />
     <meta property="og:image" content="https://enarchitecture.in/assets/industries_internal/interiors/high_enad_residential/5_bunglow_at_ambivali.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://enarchitecture.in/" />
-    <meta property="twitter:title" content="ENAD - EN Architecture & Designs" />
+    <meta property="twitter:title" content="EN+AD - EN Architecture & Designs" />
     <meta property="twitter:description" content="We combine environment and architecture to create humane spaces that inspire and endure co-ordination between built and un-built." />
     <meta property="twitter:image" content="https://enarchitecture.in/assets/industries_internal/interiors/high_enad_residential/5_bunglow_at_ambivali.jpg" />
 
