--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
             </a>
             <!-- mobile menu btn -->
             <div class="mobile_menu_btn">
-                <span class="material-symbols-outlined mob_menu_icon menu_open_icon show_mob_icon">family_home</span>
+                <span class="material-symbols-outlined mob_menu_icon menu_open_icon show_mob_icon">view_cozy</span>
                 <span class="material-symbols-outlined mob_menu_icon menu_close_icon">design_services</span>
             </div>
             <!-- main navigation -->
