--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </a>
             <!-- mobile menu btn -->
             <div class="mobile_menu_btn">
-                <span class="material-symbols-outlined mob_menu_icon menu_open_icon show_mob_icon">family_home</span>
+                <span class="material-symbols-outlined mob_menu_icon menu_open_icon show_mob_icon">view_cozy</span>
                 <span class="material-symbols-outlined mob_menu_icon menu_close_icon">design_services</span>
             </div>
             <!-- main navigation -->
@@ -66,10 +66,15 @@
     <section class="hero_wrap">
         <div class="hero">
             <div class="container hero_container">
-                <p class="hero_head">
-                    We combine environment and architecture to create humane spaces that inspire and endure co-ordination between built and un-built.
-                </p>
-                <a class="hero_cta">key projects</a>
+                <div class="atf_content">
+                    <p class="hero_head">
+                        We combine environment and architecture to create humane spaces that inspire and endure co-ordination between built and un-built.
+                    </p>
+                    <a class="hero_cta">key projects</a>
+                </div>
+                <div class="atf_image">
+                    <img src="assets/atf-backgrounds/atf_image_v3.svg" alt="">
+                </div>
             </div>
         </div>
     </section>
@@ -390,27 +395,6 @@
             </div>
         </div>
     </section>
-    <!-- clients -->
-    <section class="clients">
-        <div class="container">
-            <!-- <p class="client_head">they trust our work, so can you!</p> -->
-            <div class="clients_wrap">
-                <!-- client -->
-                <!-- <div class="client">
-                    <img src="https://dummyimage.com/190x70/000/fff" alt="">
-                </div> -->
-                <!-- client -->
-                <!-- <div class="client">
-                    <img src="https://dummyimage.com/190x70/000/fff" alt="">
-                </div> -->
-                <!-- client -->
-                <!-- <div class="client">
-                    <img src="https://dummyimage.com/190x70/000/fff" alt="">
-                </div> -->
-                
-            </div>
-        </div>
-    </section>
     <!-- footer -->
     <footer>
         <div class="container footer_container">
@@ -477,8 +461,16 @@
     <div class="mobile_menu">
         <a href="index.html" class="mob_menu_link">Home</a>
         <a href="#keyProjects" class="mob_menu_link">Key Projects</a>
-        <a href="#industries" class="mob_menu_link">Industries</a>
+        <a class="industries_mob_link">Industries <span class="material-symbols-outlined more_links">arrow_right_alt</span></a>
         <a href="about.html" class="mob_menu_link">About</a>
+    </div>
+    <!-- industries mobile menu -->
+    <div class="industries_mobile_menu">
+        <span class="material-symbols-outlined go_back_indus">arrow_left_alt</span>
+        <a href="architecture.html" class="mob_indus_link">Architecture</a>
+        <a href="landscape.html" class="mob_indus_link">Landscape</a>
+        <a href="interiors.html" class="mob_indus_link">Interiors</a>
+        <a href="hospitality-healthcare.html" class="mob_indus_link">Hospitality & Healthcare</a>
     </div>
     <!-- sticky industries header -->
     <div class="sticky_industries">
