--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <meta property="og:url" content="https://enarchitecture.in/" />
     <meta property="og:title" content="EN+AD - EN Architecture & Designs" />
     <meta property="og:description" content="We combine environment and architecture to create humane spaces that inspire and endure co-ordination between built and un-built." />
-    <meta property="og:image" content="/assets/meta_image.jpeg" />
+    <meta property="og:image" content="https://enarchitecture.in/assets/meta_image.jpeg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://enarchitecture.in/" />
     <meta property="twitter:title" content="EN+AD - EN Architecture & Designs" />
     <meta property="twitter:description" content="We combine environment and architecture to create humane spaces that inspire and endure co-ordination between built and un-built." />
-    <meta property="twitter:image" content="/assets/meta_image.jpeg" />
+    <meta property="twitter:image" content="https://enarchitecture.in/assets/meta_image.jpeg" />
 
     <!-- google icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,200,0,0" />
