meta image addition tags

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <meta property="og:url" content="https://enarchitecture.in/" />
     <meta property="og:title" content="EN+AD - EN Architecture & Designs" />
     <meta property="og:description" content="We combine environment and architecture to create humane spaces that inspire and endure co-ordination between built and un-built." />
-    <meta property="og:image" content="https://enarchitecture.in/assets/meta_image.jpeg" />
+    <meta property="og:image" content="https://enarchitecture.in/assets/meta_image.jpeg">
+    <meta property="og:image:secure_url" content="https://secure.enarchitecture.in/assets/meta_image.jpeg" />
+    <meta property="og:image:type" content="image/jpeg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
