project name fix

--- a/landscape.html
+++ b/landscape.html
@@ -147,7 +147,7 @@
                     <img src="assets/industries_internal/landscape/landscape/4_rg_36a.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Podium at Suraksha Smart City, Sector-4B</p>
+                    <p class="project_name">Recreational ground at Suraksha Smart City</p>
                     <p class="project_desc"><span class="project_detail">Scope:</span> Landscape design</p>
                     <p class="project_desc"><span class="project_detail">Client:</span> CASL Pvt. Ltd.</p>
                     <p class="project_desc"><span class="project_detail">Year:</span> 2023-2024</p>
@@ -179,7 +179,7 @@
                     <img src="assets/industries_internal/landscape/landscape/6_rg_41.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Recreational Ground at Suraksha Smart City</p>
+                    <p class="project_name">Recreational ground at Suraksha Smart City</p>
                     <p class="project_desc"><span class="project_detail">Scope:</span> Landscape design</p>
                     <p class="project_desc"><span class="project_detail">Client:</span> CASL Pvt. Ltd.</p>
                     <p class="project_desc"><span class="project_detail">Year:</span> 2023-ongoing</p>
