copy change, live indicator fix

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <div class="key_project">
 
                     <div class="key_project_right">
-                        <p class="key_project_name"><span class="ongoing_project"></span>House on the river edge</p>
+                        <p class="key_project_name"><span class="ongoing_project"></span>House on river edge</p>
                         <p class="key_project_time">Vikramgadh, design proposal ongoing</p>
                         <p class="key_project_desc">A bespoke bungalow for sports enthusiasts. The design instigates an unique living experience where the integration of design and nature creates a distinctive experience.</p>
 
